--- a/styles/Saas_metric/Saas_metric.scss
+++ b/styles/Saas_metric/Saas_metric.scss
@@ -1757,6 +1757,242 @@ body {
         opacity: 0.1;
     }
 }
+@media only screen and (max-width: 321px)
+{
+    .college_cards .card_inside .read_article {
+        margin-top: 22px !important;
+        font-size: 10px;
+        cursor: pointer;
+        bottom: 0;
+        position: relative;
+    }
+    .college_cards .card_inside .number, .college_cards .card_inside .number1 {
+        right: 11px;
+        font-size: 40px;
+        margin-top: 17px;
+    }
+
+    
+
+#card2 
+{
+    .head_title {
+        font-weight: 600;
+        font-size: 13px;
+        margin-top: 0px;
+        font-family: fontGraphikRegular;
+    }
+    .svg_right1 {
+      
+        width: 36px;
+        padding: 0px;
+        margin-top: -48px;
+        margin-left: -32px;
+    }
+    .read_article1 {
+        font-size: 8px;
+        margin: 0px;
+        margin-top: 17px;
+    }
+    .number1 {
+        right: 4px;
+        font-size: 40px;
+        margin-top: 5px;
+    }
+}
+#card4
+{
+    .number1 {
+        right: 13px;
+        font-size: 40px;
+        top: 32px;
+        left: 9px;
+    }
+}
+
+#card5
+{
+    .read_article1 {
+        margin-top: 28px;
+        font-size: 9px;
+        position: relative;
+    }
+    .svg_right3 {
+        width: 49px;
+        height: 100%;
+        padding: 48px -5px 0px 0px;
+        position: relative;
+        margin-top: -36px;
+    }
+} 
+#card6 
+{
+    .read_article1 {
+        font-size: 11px;
+        cursor: pointer;
+        margin-top: 2px;
+    }
+}
+#card7 
+{
+    .svg_right7 {
+        width: 37px;
+        margin-left: -7px;
+        padding: 0px;
+        margin-top: 25px;
+    }
+    .read_article7 {
+        margin-top: 18px;
+        font-size: 11px;
+        cursor: pointer;
+    }
+    .number7 {
+        right: 25px;
+        font-size: 40px;
+        top: 98px;
+        left: -4px;
+    }
+}
+#card8
+{
+    .svg_right8 {
+        width: 44px;
+        height: 80px;
+        padding: 0px 10px 0px 0px;
+        position: relative;
+        margin-top: -39px;
+        margin-left: -7px;
+    }
+    .number8 {
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 0px;
+        color: #135F40;
+        margin-top: 48px;
+        position: absolute;
+        opacity: 0.1;
+        right: 7px;
+    }
+}
+#card9
+{
+    .svg_right {
+        width: 47px;
+        right: 15px;
+        position: relative;
+    }
+    .number {
+        right: 18px;
+        font-size: 40px;
+        margin-bottom: 0px;
+    }
+    .read_article {
+        margin-top: 22px !important;
+        font-size: 11px;
+        cursor: pointer;
+        bottom: 0;
+        position: relative;
+    }
+}
+#card10
+{
+    .read_article10 {
+        font-size: 13px;
+        margin-top: -6px;
+    } 
+    .number10 {
+        right: 6px;
+        font-size: 40px;
+        top: 13px;
+    }
+}
+#card11
+
+{
+    .svg_right3 {
+        width: 36px;
+        height: 100%;
+        padding: 59px 0px 0px 0px;
+        position: relative;
+        margin-top: -36px;
+    }
+    .number5 {
+        right: 6px;
+        font-size: 40px;
+        top: 93px;
+    }
+}
+#card12
+{
+    .read_article12 {
+        font-size: 9px;
+        margin-top: 23px;
+    }
+    .number12 {
+        right: 3px;
+        font-size: 40px;
+        top: 11px;
+    }  
+}
+#card13 
+{
+    .svg_right13 {
+        width: 40px;
+        margin-left: 2px;
+        padding: 0px;
+        top: 18px;
+    }
+    .number13 {
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 0px;
+        color: #FFFFFF;
+        margin-top: 44px;
+        position: absolute;
+        margin-left: -8px;
+        opacity: 0.1;
+    }
+    .read_article13 {
+        margin-top: 24px;
+        font-size: 9px;
+        cursor: pointer;
+    }
+}
+#card14
+{
+    .read_article14 {
+        margin-top: 0px;
+        font-size: 11px;
+        cursor: pointer;
+    }
+    .number14 {
+        right: 13px;
+        font-size: 40px;
+        top: 10px;
+    }
+} 
+#card15
+{
+    .svg_right {
+        width: 35px;
+        padding: 0px;
+    }
+    .read_article15 {
+        margin-top: 24px;
+        font-size: 11px;
+        cursor: pointer;
+    }
+    .number15 {
+        right: 7px;
+        font-size: 40px;
+        margin-top: 22px;
+    }
+}
+}
+
+
+
+
 
 // @media only screen and (max-width: 1024px) {
 
