--- a/styles/customer_retention/customer.scss
+++ b/styles/customer_retention/customer.scss
@@ -143,15 +143,15 @@
     color: #595959;
 }
 .head_theme {
-    .head_theme {
-        font-size     : 32px;
-        line-height   : 32px;
-        font-weight   : 700;
+     .head_theme {
+        font-size: 32px;
+        line-height: 32px;
+        font-weight: 700;
         letter-spacing: .27px;
-        margin-bottom : 30px;
-        margin-top    : 0px;
-        color         : #212121;
-        margin-top: 30px;
+        margin-bottom: 30px;
+        margin-top: 0px;
+        color: #212121;
+        margin-top: 57px;
         font-weight: 800;
     }
     .head_ques
@@ -274,11 +274,58 @@
 @media screen and (max-width: 427px) {
     .right_side {
         display: none !important;
-    }}
+    }
     .footer_social_media1 {
         display: none;
     } 
-        
+}   
+@media screen and (max-width: 426px) { 
+    .head_theme {
+        .head_theme {
+           font-size: 22px;
+           line-height: 32px;
+           font-weight: 700;
+           letter-spacing: .27px;
+           margin-bottom: 30px;
+           margin-top: 0px;
+           color: #212121;
+           margin-top: 57px;
+           font-weight: 800;
+       }
+       .head_ques
+       {
+           font-size: 18px;
+       }
+       .head_imp
+       {
+           font-size: 18px;  
+       }
+       .for_div
+       {
+           background-color: #665CD71A;
+           padding: 15px 10px 10px 10px;
+           width: 250px;
+           height: 55px;
+           .formula
+           {
+               color:#665CD7;
+           }
+       }
+       .for_div1
+       {
+           background-color: #665CD71A;
+           padding: 15px 10px 10px 10px;
+           width: 450px;
+           height: 55px;
+           .formula
+           {
+               color:#665CD7;
+           }
+       
+       }
+    }
+    
+}
 @media screen and (max-width: 768px) {
     .response-xs{
         display: none !important;
