--- a/styles/customer_retention/customer.scss
+++ b/styles/customer_retention/customer.scss
@@ -45,6 +45,10 @@
 .footer_social_media1{
     display: block !important;
 }
+.article_ref
+{
+    color:#595959;
+}
 .dropdown{
     display: none;
     position: absolute;
@@ -173,7 +177,7 @@
             color:#665CD7;
         }
     }
-    .for_div1
+    .for_div1 
     {
         background-color: #665CD71A;
         padding: 15px 10px 10px 10px;
@@ -292,6 +296,7 @@
            margin-top: 57px;
            font-weight: 800;
        }
+      
        .head_ques
        {
            font-size: 18px;
