--- a/styles/Saas_metric/Saas_metric.scss
+++ b/styles/Saas_metric/Saas_metric.scss
@@ -798,10 +798,10 @@ body {
 
         border-radius: 25px;
         color: #ffffff;
-
+        margin-left: 2px;
         height: auto !important;
         padding: 18px;
-        margin: 12px 10px;
+      
 
         .head_title {
             font-weight: 600;
@@ -1007,7 +1007,7 @@ body {
 #card6 {
     background-color: #FFD4D8;
 
-    margin-top: 30px;
+    margin-top: 24px !important;
     ;
     color: #940C17;
     margin-top: 30px;
@@ -1102,7 +1102,7 @@ body {
 #card9 {
     background-color: #C948F8;
     color: #FFFFFF;
-    margin-top: 30px;
+    margin-top: 0px;
 
     .number {
         font-size: 82px;
@@ -1119,7 +1119,7 @@ body {
 #card10 {
     background-color: #F2CDFF;
     color: #6A1789;
-    margin-top: 30px;
+    margin-top:0px;
 
     .read_article10 {
         margin-top: 25px;
@@ -1224,7 +1224,7 @@ body {
 #card14 {
     background-color: #ADFFDE;
     color: #135F40;
-    margin-top: 30px;
+    margin-top: 24px !important;
 
 
     .read_article14 {
