--- a/styles/Saas_metric/Saas_metric.css
+++ b/styles/Saas_metric/Saas_metric.css
@@ -1473,102 +1473,198 @@ body {
     display: -ms-flexbox;
     display: flex;
   }
+  .dotted_line {
+    width: 100%;
+  }
+  .footer {
+    margin-top: 0px !important;
+  }
   .webview {
     display: none;
   }
   h1 {
     font-size: 1.5rem;
   }
-  .college_cards .card_inside .number, .college_cards .card_inside .number1 {
+  .college_cards .card_inside {
+    padding: 12px 0px;
+    margin: 0px;
+    margin-top: 20px;
+    height: 175px !important;
+  }
+  .arrow_crr {
+    float: right;
+    margin-top: 10px !important;
+  }
+  .college_cards .card_inside .head_title {
+    font-size: 18px;
+    margin-top: 14px;
+  }
+  .college_cards .card_inside .number {
     right: 0px;
-    font-size: 40px;
-    margin-top: 12px;
+    font-size: 65px;
+    position: relative;
+    bottom: 36px;
   }
   #card2 {
     background-color: #E0DDFF;
     color: #222C5D;
     padding: 22px 5px 22px 10px;
-    height: 130px !important;
+    height: 140px !important;
   }
   #card2 .number1 {
-    right: 38px;
-    font-size: 40px;
-    margin-top: -5px;
+    right: 0px;
+    font-size: 65px;
+    margin-top: 0px;
+    position: relative;
+    bottom: 15px;
+    left: 18px;
+  }
+  #card2 .arrow_crr1 {
+    float: right;
+    margin-top: 20px;
+  }
+  #card3 {
+    margin-top: 0px;
+    background-color: #FDB32C;
+    position: relative;
+    bottom: 12px;
   }
   #card4 {
-    height: 126px !important;
+    margin-top: 0px;
+    height: 140px !important;
+  }
+  #card4 .head_title {
+    font-size: 18px;
+  }
+  #card4 .arrow_crr1 {
+    float: right;
+    margin-top: 30px;
   }
   #card4 .number1 {
-    right: 52px;
-    font-size: 40px;
-    top: 0px;
+    right: 0px;
+    font-size: 65px;
+    top: 10px;
+    bottom: 0px;
+    left: 18px;
+    position: relative;
   }
   #card5 {
-    height: 160px !important;
+    margin-top: 8px;
+  }
+  #card5 .college_cards .card_inside {
+    padding: 12px 0px;
+    margin: 0px;
+    margin-top: 20px;
+    height: 175px !important;
   }
   #card5 .number5 {
-    right: 39px;
-    font-size: 40px;
-    top: 63px;
+    right: 0px;
+    font-size: 65px;
+    position: relative;
+    bottom: 20px;
+    left: -20px;
+  }
+  #card5 .arrow_crr2 {
+    float: right;
+    margin-top: 39px !important;
   }
   #card6 {
-    height: 126px !important;
+    margin-top: 12px !important;
+  }
+  #card6 .college_cards .card_inside {
+    padding: 12px 0px;
+    margin: 0px;
+    margin-top: 20px;
+    height: 175px !important;
   }
   #card6 .number1 {
-    right: 41px;
-    font-size: 40px;
-    top: 29px !important;
+    right: -6px;
+    font-size: 65px;
+    position: relative;
+    top: 11px;
   }
   #card7 {
-    height: 172px !important;
+    height: 175px !important;
   }
-  #card7 .number7 .number7 {
+  #card7 .number7 {
     right: 0px;
-    font-size: 40px;
-    top: 79px;
-    left: 19px;
+    font-size: 65px;
+    top: 0px;
+    left: 2px;
+    position: relative;
+    top: -19px;
+  }
+  #card7 .arrow_crr3 {
+    float: right;
+    margin-top: 34px;
   }
   #card8 {
-    height: 145px !important;
+    height: 150px !important;
+    margin-top: 0px !important;
   }
   #card8 .number8 {
-    font-size: 40px;
+    font-size: 65px;
     font-weight: bold;
     margin-bottom: 0px;
     color: #135F40;
-    margin-top: -8px;
+    margin-top: -24px;
     position: absolute;
     margin-left: -1px;
     opacity: 0.1;
   }
+  #card8 .arrow_crr4 {
+    float: right;
+    margin-top: 12px;
+  }
+  #card9 {
+    margin-top: 3px;
+    height: 195px !important;
+  }
   #card9 .number {
     right: 0px;
-    font-size: 40px;
+    font-size: 65px;
+    top: -21px;
     margin-bottom: 0px;
   }
+  #card9 .arrow_crr7 {
+    float: right;
+    margin-top: 24px;
+  }
   #card10 {
-    height: 130px !important;
+    height: 155px !important;
+    margin-top: 24px;
   }
   #card10 .number10 {
-    right: 77px;
-    font-size: 40px;
-    top: 14px;
+    right: 0px;
+    font-size: 65px;
+    top: 0px;
+    left: 40px;
   }
   #card11 {
-    height: 160px !important;
+    height: 185px !important;
+    margin-top: 5px !important;
   }
   #card11 .number5 {
-    right: 45px;
-    font-size: 40px;
-    top: 80px;
+    right: 25px;
+    font-size: 65px;
+    top: -24px;
+  }
+  #card11 .arrow_crr4 {
+    float: right;
+    margin-top: 15px;
   }
   #card12 {
-    height: 122px !important;
+    height: 140px !important;
+    margin-top: 22px !important;
   }
   #card12 .number12 {
-    right: 74px;
-    font-size: 40px;
-    top: -3px;
+    right: 51px;
+    font-size: 65px;
+    top: 0px;
+  }
+  #card12 .arrow_crr4 {
+    float: right;
+    margin-top: 24px;
   }
   #card14 {
     height: 130px !important;
@@ -1581,21 +1677,19 @@ body {
   #card13 {
     height: 160px !important;
   }
-  #card13 .svg_right13 {
-    width: 90%;
-    margin-left: 22px;
-    padding: 0px;
-    top: 18px;
-  }
   #card13 .number13 {
-    font-size: 40px;
+    font-size: 65px;
     font-weight: bold;
     margin-bottom: 0px;
     color: #FFFFFF;
     margin-top: -17px;
     position: relative;
-    margin-left: -3px;
+    margin-left: -6px;
     opacity: 0.1;
+  }
+  #card13 .arrow_crr8 {
+    margin-top: 21px;
+    float: right;
   }
   .arrow_crr {
     float: right;
@@ -1636,18 +1730,25 @@ body {
     margin-top: 50px;
     float: right;
   }
+  #card14 {
+    height: 150px !important;
+    margin-top: 7px !important;
+  }
   #card14 .number14 {
-    right: 61px;
-    font-size: 40px;
-    top: 7px;
+    right: 38px;
+    font-size: 65px;
+    top: -9px;
   }
   #card15 {
-    height: 160px !important;
+    height: 195px !important;
+    margin-top: 0px;
+    position: relative;
+    bottom: 6px;
   }
   #card15 .number15 {
-    right: 48px;
-    top: 78px;
-    font-size: 40px;
+    right: 38px;
+    top: -23px;
+    font-size: 65px;
   }
 }
 
@@ -1664,20 +1765,18 @@ body {
   }
   #card2 .head_title {
     font-weight: 600;
-    font-size: 11px;
+    font-size: 18px;
     margin-top: 0px;
     font-family: fontGraphikRegular;
   }
-  #card2 .svg_right1 {
-    width: 100%;
-    padding: 0px;
-    margin-top: -51px;
-    margin-left: -17px;
-  }
   #card2 .number1 {
     right: 25px;
-    font-size: 40px;
-    margin-top: -5px;
+    font-size: 65px;
+    margin-top: 8px;
+  }
+  #card2 .arrow_crr1 {
+    float: right;
+    margin-top: 26px;
   }
   .arrow_crr {
     float: right;
@@ -1712,66 +1811,74 @@ body {
     padding: 0px;
     margin-left: 16px;
   }
+  #card4 .arrow_crr1 {
+    float: right;
+    margin-top: 4px;
+  }
   #card4 .number1 {
     right: 45px;
-    font-size: 40px;
-    top: 7px;
+    font-size: 65px;
+    top: -14px;
   }
   #card5 {
-    margin-top: 23px;
+    margin-top: 9px;
   }
   #card6 .number1 {
-    right: 41px;
-    font-size: 40px;
+    right: 0px;
+    font-size: 65px;
     top: 16px;
+    left: 7px;
   }
   #card7 .number7 {
     right: 0px;
-    font-size: 40px;
-    top: 86px;
-    left: 19px;
+    font-size: 65px;
+    top: -38px;
+    left: 3px;
   }
-  #card7 .svg_right7 {
-    width: 40px;
-    margin-left: 0px;
-    padding: 0px;
-    margin-top: 10px;
+  #card7 .arrow_crr3 {
+    float: right;
+    margin-top: 12px;
   }
   #card8 .number8 {
-    font-size: 40px;
+    font-size: 65px;
     font-weight: bold;
     margin-bottom: 0px;
     color: #135F40;
-    margin-top: -13px;
+    margin-top: -25px;
     position: absolute;
     margin-left: 0px;
     opacity: 0.1;
   }
-  #card8 .svg_right8 {
-    width: 106%;
-    height: 80px;
-    padding: 0px 10px 0px 0px;
-    position: relative;
-    margin-top: -39px;
-    margin-left: 9px;
+  #card10 {
+    height: 160px !important;
   }
   #card10 .number10 {
     right: 60px;
-    font-size: 40px;
-    top: 11px;
+    font-size: 65px;
+    top: -13px;
   }
   #card11 .number5 {
-    right: 35px;
-    font-size: 40px;
-    top: 86px;
+    right: 8px;
+    font-size: 65px;
+    top: -27px;
+  }
+  #card12 {
+    height: 160px !important;
   }
   #card12 .number12 {
-    right: 60px;
-    font-size: 40px;
-    top: -4px;
+    right: 29px;
+    font-size: 65px;
+    top: -10px;
+  }
+  #card12 .arrow_crr4 {
+    float: right;
+    margin-top: 11px;
+  }
+  #card13 {
+    height: 180px !important;
   }
   #card13 .number13 {
-    font-size: 40px;
+    font-size: 65px;
     font-weight: bold;
     margin-bottom: 0px;
     color: #FFFFFF;
@@ -1780,39 +1887,57 @@ body {
     margin-left: -8px;
     opacity: 0.1;
   }
+  #card14 {
+    height: 180px !important;
+    margin-top: 23px !important;
+  }
   #card14 .number14 {
-    right: 47px;
-    font-size: 40px;
-    top: 10px;
+    right: 20px;
+    font-size: 65px;
+    top: -9px;
+  }
+  #card15 {
+    height: 195px !important;
+    margin-top: 0px;
+    position: relative;
+    bottom: -12px;
   }
   #card15 .number15 {
-    right: 48px;
-    top: 66px;
-    font-size: 40px;
+    right: 19px;
+    top: -29px;
+    font-size: 65px;
   }
 }
 
 @media only screen and (max-width: 321px) {
-  .college_cards .card_inside .read_article {
-    margin-top: 22px !important;
-    font-size: 10px;
-    cursor: pointer;
-    bottom: 0;
-    position: relative;
+  .college_cards .card_inside .head_title {
+    font-size: 16px;
+    margin-top: 14px;
   }
   .college_cards .card_inside .number, .college_cards .card_inside .number1 {
     right: 11px;
     font-size: 40px;
-    margin-top: 17px;
+    margin-top: 30px;
     left: 1px;
   }
-  .arrow_crr {
-    float: right;
-    margin-top: 45px;
+  #card2 {
+    height: 140px;
   }
-  .arrow_crr1 {
+  #card2 .number1 {
+    right: 4px;
+    font-size: 40px;
+    left: 19px;
+    margin-top: 21px;
+  }
+  #card2 .arrow_crr1 {
     float: right;
-    margin-top: 40px;
+    margin-top: 23px;
+  }
+  #card2 .head_title {
+    font-weight: 600;
+    font-size: 16px !important;
+    margin-top: 0px;
+    font-family: fontGraphikRegular;
   }
   .arrow_crr2 {
     float: right;
@@ -1830,83 +1955,65 @@ body {
     float: right;
     margin-top: 25px;
   }
-  #card2 .head_title {
-    font-weight: 600;
-    font-size: 13px;
-    margin-top: 0px;
-    font-family: fontGraphikRegular;
-  }
-  #card2 .svg_right1 {
-    width: 36px;
-    padding: 0px;
-    margin-top: -48px;
-    margin-left: -32px;
-  }
-  #card2 .number1 {
-    right: 4px;
-    font-size: 40px;
-    left: 32px;
-    margin-top: 0px;
+  #card4 .head_title {
+    font-size: 16px;
   }
   #card4 .number1 {
-    right: 0px;
-    font-size: 40px;
-    top: 0px;
-    left: 37px;
+    right: 43px;
+    font-size: 40px !important;
+    top: 4px;
+  }
+  #card5 .arrow_crr2 {
+    float: right;
+    margin-top: 13px !important;
   }
   #card5 .number5 {
     right: 15px;
     font-size: 40px;
-    top: 63px;
+    top: -28px;
   }
   #card6 {
-    height: 145px !important;
+    height: 172px !important;
   }
   #card6 .number1 {
     right: 0px;
     font-size: 40px;
-    top: 16px;
-    left: 22px;
-  }
-  #card7 .svg_right7 {
-    width: 37px;
-    margin-left: -7px;
-    padding: 0px;
-    margin-top: 25px;
+    top: 27px;
+    left: 12px;
   }
   #card7 .number7 {
     right: 0px;
     font-size: 40px;
-    top: 91px;
-    left: 11px;
+    top: -33px;
+    left: 1px;
   }
-  #card8 .svg_right8 {
-    width: 44px;
-    height: 80px;
-    padding: 0px 10px 0px 0px;
-    position: relative;
-    margin-top: -39px;
-    margin-left: -7px;
+  #card7 .arrow_crr3 {
+    float: right;
+    margin-top: 0px;
   }
   #card8 .number8 {
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 0px;
     color: #135F40;
-    margin-top: -24px;
+    margin-top: -19px;
     position: absolute;
     opacity: 0.1;
     right: 18px;
   }
-  #card9 .svg_right {
-    width: 47px;
-    right: 15px;
-    position: relative;
+  #card8 .arrow_crr4 {
+    float: right;
+    margin-top: -2px;
   }
   #card9 .number {
     right: 18px;
     font-size: 40px;
+    top: -37px;
     margin-bottom: 0px;
+  }
+  #card9 .arrow_crr7 {
+    float: right;
+    margin-top: 10px;
   }
   #card9 .read_article {
     margin-top: 22px !important;
@@ -1920,9 +2027,11 @@ body {
     margin-top: -6px;
   }
   #card10 .number10 {
-    right: 42px;
+    right: 0px;
     font-size: 40px;
-    top: 10px;
+    top: 8px;
+    margin-bottom: 0px;
+    left: 44px;
   }
   #card11 .svg_right3 {
     width: 36px;
@@ -1932,14 +2041,18 @@ body {
     margin-top: -36px;
   }
   #card11 .number5 {
-    right: 19px;
+    right: 10px;
     font-size: 40px;
-    top: 93px;
+    top: -10px;
+  }
+  #card11 .arrow_crr4 {
+    float: right;
+    margin-top: 7px;
   }
   #card12 .number12 {
     right: 37px;
     font-size: 40px;
-    top: -5px;
+    top: 9px;
   }
   #card13 .svg_right13 {
     width: 40px;
@@ -1957,13 +2070,12 @@ body {
     margin-left: -8px;
     opacity: 0.1;
   }
-  #card13 .read_article13 {
-    margin-top: 24px;
-    font-size: 9px;
-    cursor: pointer;
+  #card13 .arrow_crr8 {
+    margin-top: 5px;
+    float: right;
   }
   #card14 {
-    height: 145px !important;
+    height: 160px !important;
   }
   #card14 .read_article14 {
     margin-top: 0px;
@@ -1975,19 +2087,14 @@ body {
     font-size: 40px;
     top: 10px;
   }
-  #card15 .svg_right {
-    width: 35px;
-    padding: 0px;
-  }
-  #card15 .read_article15 {
-    margin-top: 24px;
-    font-size: 11px;
-    cursor: pointer;
-  }
   #card15 .number15 {
     right: 30px;
     font-size: 40px;
     margin-top: 22px;
+  }
+  #card15 .arrow_crr5 {
+    float: right;
+    margin-top: 10px;
   }
 }
 /*# sourceMappingURL=Saas_metric.css.map */
