--- a/styles/Saas_metric/Saas_metric.scss
+++ b/styles/Saas_metric/Saas_metric.scss
@@ -1611,18 +1611,41 @@ body {
 {
     display:flex;
 }
+.dotted_line{
+    width: 100%;
+}
+.footer {
+    margin-top: 0px !important;
+}
 .webview
 {
     display:none;
 }
+h1
 
-    h1 {
-        font-size: 1.5rem;
+{
+    font-size: 1.5rem;
+}
+    
+    .college_cards .card_inside {
+        padding: 12px 0px;
+        margin: 0px;
+        margin-top: 20px;
+        height: 175px !important;
     }
-    .college_cards .card_inside .number, .college_cards .card_inside .number1 {
+    .arrow_crr {
+        float: right;
+        margin-top: 10px !important;
+    }
+    .college_cards .card_inside .head_title {
+        font-size: 18px;
+        margin-top: 14px;
+    }
+    .college_cards .card_inside .number{
         right: 0px;
-        font-size: 40px;
-        margin-top: 12px;
+        font-size: 65px;
+        position: relative;
+        bottom: 36px;
     }
     #card2 
     {
@@ -1630,100 +1653,182 @@ body {
             background-color: #E0DDFF;
             color: #222C5D;
             padding: 22px 5px 22px 10px;
-            height: 130px !important;
+            height: 140px !important;
             .number1 {
-                right: 38px;
-                font-size: 40px;
-                margin-top: -5px;
+                right: 0px;
+                font-size: 65px;
+                margin-top: 0px;
+                position: relative;
+    bottom: 15px;
+    left: 18px;
             }
+            .arrow_crr1 {
+                float: right;
+                margin-top: 20px;
+            }
+    }
+    #card3
+    {
+        margin-top: 0px;
+        background-color: #FDB32C;
+        position: relative;
+        bottom: 12px;
     }
     #card4
     {
-        height: 126px !important;
-         .number1 {
-            right: 52px;
-            font-size: 40px;
-            top: 0px;
+        margin-top: 0px;
+        height: 140px !important;
+        .head_title {
+            font-size: 18px;
         }
+       
+        .arrow_crr1 {
+            float: right;
+            margin-top: 30px ;
+        }
+ .number1 {
+    right: 0px;
+    font-size: 65px;
+    top: 10px;
+    bottom: 0px;
+    left: 18px;
+    position: relative;
+}
 }
     #card5 
     {
-        height: 160px !important;
+        margin-top: 8px;
+        .college_cards .card_inside {
+            padding: 12px 0px;
+            margin: 0px;
+            margin-top: 20px;
+            height: 175px !important;
+        }
+
         .number5 {
-            right: 39px;
-            font-size: 40px;
-            top: 63px;
+            right: 0px;
+            font-size: 65px;
+            position: relative;
+            bottom: 20px;
+            left: -20px;
         }  
+        .arrow_crr2 {
+            float: right;
+            margin-top: 39px !important;
+        }
     }
     #card6 
     {
-        height: 126px !important;
-         .number1 {
-            right: 41px;
-            font-size: 40px;
-            top: 29px !important;
+        margin-top: 12px !important;
+        .college_cards .card_inside {
+            padding: 12px 0px;
+            margin: 0px;
+            margin-top: 20px;
+            height: 175px !important;
+        }
+        .number1 {
+            right: -6px;
+            font-size: 65px;
+            position: relative;
+           
+            top: 11px;
         }
     }
     
     
     #card7 
     {
-        height: 172px !important;
+        height: 175px !important;
+        
         .number7 {
-            .number7 {
-                right: 0px;
-                font-size: 40px;
-                top: 79px;
-                left: 19px;
-            }
+            right: 0px;
+            font-size: 65px;
+            top: 0px;
+            left: 2px;
+            position: relative;
+            top: -19px;
         }
-    }
+        .arrow_crr3 {
+            float: right;
+            margin-top: 34px;
+        }
+        }
+    
     #card8 
     {
-        height: 145px !important;
-        .number8{
-            font-size: 40px;
+        height: 150px !important;
+        margin-top: 0px !important;
+        .number8 {
+            font-size: 65px;
             font-weight: bold;
             margin-bottom: 0px;
             color: #135F40;
-            margin-top: -8px;
+            margin-top: -24px;
             position: absolute;
             margin-left: -1px;
             opacity: 0.1;
         }
+        
+
+.arrow_crr4 {
+    float: right;
+    margin-top: 12px;
+}
        
     }
     
-    #card9 .number {
-        right: 0px;
-        font-size: 40px;
-        margin-bottom: 0px;
+    #card9
+    {
+        margin-top: 3px;
+        height: 195px !important;
+        .number {
+            right: 0px;
+            font-size: 65px;
+            top: -21px;
+            margin-bottom: 0px;
+        }
+        .arrow_crr7 {
+            float: right;
+            margin-top: 24px;
+        }
     }
     #card10 
     {
-        height:130px!important;
-         .number10 {
-            right: 77px;
-            font-size: 40px;
-            top: 14px;
-        }
+        height: 155px !important;
+    margin-top: 24px;
+    .number10 {
+        right: 0px;
+        font-size: 65px;
+        top: 0px;
+        left: 40px;
+    }
     }
     #card11
     {
-        height:160px !important;
+        height:185px !important;
+        margin-top: 5px !important;
         .number5 {
-            right: 45px;
-            font-size: 40px;
-            top: 80px;
+            right: 25px;
+            font-size: 65px;
+            top: -24px;
+        }
+        .arrow_crr4 {
+            float: right;
+            margin-top: 15px;
         }
     }
     #card12
     {
-        height:122px !important;
+        height:140px !important;
+        margin-top: 22px !important;
         .number12 {
-            right: 74px;
-            font-size: 40px;
-            top: -3px;
+            right: 51px;
+            font-size: 65px;
+            top: 0px;
+        }
+        .arrow_crr4 {
+            float: right;
+            margin-top: 24px;
         }
     }
    
@@ -1742,21 +1847,20 @@ body {
 {
     
         height: 160px !important;
-        .svg_right13 {
-            width: 90%;
-            margin-left: 22px;
-            padding: 0px;
-            top: 18px;
-        }
+        
         .number13 {
-            font-size: 40px;
-    font-weight: bold;
-    margin-bottom: 0px;
-    color: #FFFFFF;
-    margin-top: -17px;
-    position: relative;
-    margin-left: -3px;
-    opacity: 0.1;
+            font-size: 65px;
+            font-weight: bold;
+            margin-bottom: 0px;
+            color: #FFFFFF;
+            margin-top: -17px;
+            position: relative;
+            margin-left: -6px;
+            opacity: 0.1;
+        }
+        .arrow_crr8 {
+            margin-top: 21px;
+            float: right;
         }
     }
 
@@ -1806,25 +1910,36 @@ body {
     }
     
 
-    #card14 .number14 {
-        right: 61px;
-        font-size: 40px;
-        top: 7px;
+    #card14 
+    {
+        height: 150px !important;
+        margin-top: 7px !important;
+        .number14 {
+            right: 38px;
+            font-size: 65px;
+            top: -9px;
+        }
     }
+    
 
 #card15
 {
-    height:160px !important;
+    height:195px !important;
+    margin-top: 0px;
+    position: relative;
+    bottom: 6px;
    
-        .number15 {
-            right: 48px;
-            top: 78px;
-            font-size: 40px;
-        }
+    .number15 {
+        right: 38px;
+        top: -23px;
+        font-size: 65px;
+    }
     }
 
 } 
-
+@media screen and (max-width: 362px) {
+            
+}
 
 @media only screen and (max-width: 376px)
 {
@@ -1842,21 +1957,20 @@ body {
     {
         .head_title {
             font-weight: 600;
-            font-size: 11px;
+            font-size: 18px;
             margin-top: 0px;
             font-family: fontGraphikRegular;
         } 
-        .svg_right1 {
-            width: 100%;
-            padding: 0px;
-            margin-top: -51px;
-            margin-left: -17px;
-        }
+        
         
         .number1 {
             right: 25px;
-            font-size: 40px;
-            margin-top: -5px;
+            font-size: 65px;
+            margin-top: 8px;
+        }
+        .arrow_crr1 {
+            float: right;
+            margin-top: 26px;
         }
        
     }
@@ -1905,71 +2019,86 @@ body {
         padding: 0px;
         margin-left: 16px;
     }
-    #card4 .number1 {
+    #card4 
+    {
+        .arrow_crr1 {
+            float: right;
+            margin-top: 4px;
+        }   
+    .number1 {
         right: 45px;
-        font-size: 40px;
-        top: 7px;
+        font-size: 65px;
+        top: -14px;
     }
+}
     #card5 
     {
-        margin-top: 23px;
+        margin-top: 9px;
     }
     
     #card6 .number1 {
-        right: 41px;
-        font-size: 40px;
-        top: 16px;
-    }
-    #card7 .number7 {
         right: 0px;
-        font-size: 40px;
-        top: 86px;
-        left: 19px;
+        font-size: 65px;
+        top: 16px;
+        left: 7px;
     }
-    #card7 .svg_right7 {
-        width: 40px;
-        margin-left: 0px;
-        padding: 0px;
-        margin-top: 10px;
+    #card7
+    {
+        .number7 {
+            right: 0px;
+            font-size: 65px;
+            top: -38px;
+            left: 3px;
+        }
+        .arrow_crr3 {
+            float: right;
+            margin-top: 12px;
+        }
     }
+   
     #card8 .number8 {
-        font-size: 40px;
+        font-size: 65px;
         font-weight: bold;
         margin-bottom: 0px;
         color: #135F40;
-        margin-top: -13px;
+        margin-top: -25px;
         position: absolute;
         margin-left: 0px;
         opacity: 0.1;
     }
-    #card8 .svg_right8 {
-        width: 106%;
-        height: 80px;
-        padding: 0px 10px 0px 0px;
-        position: relative;
-        margin-top: -39px;
-        
-        margin-left: 9px;
-    }
-    #card10 .number10 {
-        right: 60px;
-        font-size: 40px;
-        top: 11px;
+   
+    #card10 
+    {
+         height: 160px !important;
+        .number10 {
+            right: 60px;
+            font-size: 65px;
+            top: -13px;
+        }
     }
     #card11 .number5 {
-        right: 35px;
-        font-size: 40px;
-        top: 86px;
+        right: 8px;
+        font-size: 65px;
+        top: -27px;
     }
-    #card12 .number12 {
-        right: 60px;
-        font-size: 40px;
-        top: -4px;
+    #card12 
+    {
+        height: 160px !important;
+        .number12 {
+            right: 29px;
+            font-size: 65px;
+            top: -10px;
+        }
+        .arrow_crr4 {
+            float: right;
+            margin-top: 11px;
+        }
     }
     #card13 
     {
+        height: 180px !important;
         .number13 {
-            font-size: 40px;
+            font-size: 65px;
             font-weight: bold;
             margin-bottom: 0px;
             color: #FFFFFF;
@@ -1982,45 +2111,67 @@ body {
     
     
 
-    #card14 .number14 {
-        right: 47px;
-        font-size: 40px;
-        top: 10px;
+    #card14 {
+        height: 180px !important;
+        margin-top: 23px !important;
+        .number14 {
+            right: 20px;
+            font-size: 65px;
+            top: -9px;
+        }
     }
-#card15 .number15 {
-    right: 48px;
-    top: 66px;
-    font-size: 40px;
-}   
 
+#card15 {
+    height: 195px !important;
+    margin-top: 0px;
+    position: relative;
+    bottom: -12px;
+    .number15 {
+        right: 19px;
+        top: -29px;
+        font-size: 65px;
+    }  
+}
 }
 @media only screen and (max-width: 321px)
 {
-    .college_cards .card_inside .read_article {
-        margin-top: 22px !important;
-        font-size: 10px;
-        cursor: pointer;
-        bottom: 0;
-        position: relative;
-    }
-    .college_cards .card_inside .number, .college_cards .card_inside .number1 {
-        right: 11px;
-        font-size: 40px;
-        margin-top: 17px;
-        left: 1px;
-    }
-
     
-    .arrow_crr
-    {
-        float: right;
-        margin-top: 45px;
+    .college_cards .card_inside .head_title {
+        font-size: 16px;
+        margin-top: 14px;
     }
-    .arrow_crr1
+        
+        .college_cards .card_inside .number, .college_cards .card_inside .number1 {
+            right: 11px;
+            font-size: 40px;
+            margin-top: 30px;
+            left: 1px;
+        }
+        
+    
+
+    #card2
     {
-        float: right;
-        margin-top: 40px;
-    }
+        height: 140px;
+        .number1 {
+            right: 4px;
+            font-size: 40px;
+            left: 19px;
+            margin-top: 21px;
+        }
+        .arrow_crr1 {
+            float: right;
+            margin-top: 23px;
+        }
+        .head_title {
+            font-weight: 600;
+            font-size: 16px !important;
+            margin-top: 0px;
+            font-family: fontGraphikRegular;
+        }
+    } 
+    
+    
     .arrow_crr2
     {
         float: right;
@@ -2041,108 +2192,88 @@ body {
         float: right;
         margin-top: 25px;
     }
-#card2 
-{
-    .head_title {
-        font-weight: 600;
-        font-size: 13px;
-        margin-top: 0px;
-        font-family: fontGraphikRegular;
-    }
-    .svg_right1 {
-      
-        width: 36px;
-        padding: 0px;
-        margin-top: -48px;
-        margin-left: -32px;
-    }
-   
-    .number1 {
-        right: 4px;
-        font-size: 40px;
-        left: 32px;
-        margin-top: 0px;
-    }
-}
+
+
 #card4
 {
-    
+    .head_title {
+        font-size: 16px;
+    }
 
- .number1 {
-    right: 0px;
-    font-size: 40px;
-    top: 0px;
-    left: 37px;
-}
+    .number1 {
+        right: 43px;
+        font-size: 40px !important;
+        top: 4px;
+    }
 }
 
 #card5
 {
-    
-.number5 {
-    right: 15px;
-    font-size: 40px;
-    top: 63px;
-}
+    .arrow_crr2 {
+        float: right;
+        margin-top: 13px !important;
+    }
+    .number5 {
+        right: 15px;
+        font-size: 40px;
+        top: -28px;
+    }
 } 
 #card6 
 {
-    height:145px !important;
+    height: 172px !important;
     .number1 {
         right: 0px;
         font-size: 40px;
-        top: 16px;
-        left: 22px;
+        top: 27px;
+        left: 12px;
     }
 }
 #card7 
 {
-    .svg_right7 {
-        width: 37px;
-        margin-left: -7px;
-        padding: 0px;
-        margin-top: 25px;
-    }
-    
+
  .number7 {
         right: 0px;
         font-size: 40px;
-        top: 91px;
-        left: 11px;
+        top: -33px;
+        left: 1px;
     }
+    .arrow_crr3 {
+        float: right;
+        margin-top: 0px;
+    }
+
 }
 #card8
 {
-    .svg_right8 {
-        width: 44px;
-        height: 80px;
-        padding: 0px 10px 0px 0px;
-        position: relative;
-        margin-top: -39px;
-        margin-left: -7px;
-    }
+    
     .number8 {
         font-size: 40px;
         font-weight: bold;
         margin-bottom: 0px;
         color: #135F40;
-        margin-top: -24px;
+        margin-top: -19px;
         position: absolute;
         opacity: 0.1;
         right: 18px;
     }
+    .arrow_crr4 {
+        float: right;
+        margin-top: -2px;
+    }
 }
 #card9
 {
-    .svg_right {
-        width: 47px;
-        right: 15px;
-        position: relative;
-    }
+    
     .number {
         right: 18px;
         font-size: 40px;
+        top: -37px;
         margin-bottom: 0px;
+    }
+    .arrow_crr7 {
+        float: right;
+        margin-top: 10px;
     }
     .read_article {
         margin-top: 22px !important;
@@ -2159,9 +2290,11 @@ body {
         margin-top: -6px;
     } 
     .number10 {
-        right: 42px;
+        right: 0px;
         font-size: 40px;
-        top: 10px;
+        top: 8px;
+        margin-bottom: 0px;
+        left: 44px;
     }
 }
 #card11
@@ -2174,16 +2307,20 @@ body {
         position: relative;
         margin-top: -36px;
     }
-     .number5 {
-        right: 19px;
+    .number5 {
+        right: 10px;
         font-size: 40px;
-        top: 93px;
+        top: -10px;
+    }
+    .arrow_crr4 {
+        float: right;
+        margin-top: 7px;
     }
 }
 #card12 .number12 {
     right: 37px;
     font-size: 40px;
-    top: -5px;
+    top: 9px;
 }
 #card13 
 {
@@ -2203,15 +2340,15 @@ body {
         margin-left: -8px;
         opacity: 0.1;
     }
-    .read_article13 {
-        margin-top: 24px;
-        font-size: 9px;
-        cursor: pointer;
+    
+    .arrow_crr8 {
+        margin-top: 5px;
+        float: right;
     }
 }
 #card14
 {
-    height: 145px !important  ;
+    height: 160px !important  ;
     .read_article14 {
         margin-top: 0px;
         font-size: 11px;
@@ -2225,19 +2362,15 @@ body {
 } 
 #card15
 {
-    .svg_right {
-        width: 35px;
-        padding: 0px;
-    }
-    .read_article15 {
-        margin-top: 24px;
-        font-size: 11px;
-        cursor: pointer;
-    }
+    
      .number15 {
         right: 30px;
         font-size: 40px;
         margin-top: 22px;
+    }
+    .arrow_crr5 {
+        float: right;
+        margin-top: 10px;
     }
 }
 }
